k8s/04-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: devops-academy
  labels: { app: backend }
spec:
  replicas: 2
  selector:
    matchLabels: { app: backend }
  template:
    metadata:
      labels: { app: backend }
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1001
      containers:
        - name: backend
          image: ghcr.io/sadiq-code-nest/devops-academy-backend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
          resources:
            requests: { cpu: "100m", memory: "128Mi" }
            limits: { cpu: "500m", memory: "256Mi" }
          readinessProbe:
            httpGet: { path: /api/health, port: 5000 }
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet: { path: /api/health, port: 5000 }
            initialDelaySeconds: 15
            periodSeconds: 20
          securityContext:
            allowPrivilegeEscalation: false
            capabilities: { drop: ["ALL"] }

---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: devops-academy
spec:
  selector: { app: backend }
  ports:
    - port: 5000
      targetPort: 5000
