k8s/06-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: academy-ingress
  namespace: devops-academy
spec:
  ingressClassName: traefik
  rules:
    - host: app.sadiqdev.online
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service: { name: backend, port: { number: 5000 } }
          - path: /
            pathType: Prefix
            backend:
              service: { name: frontend, port: { number: 8080 } }
